applications/authentik/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-http-redirect
  namespace: authentik
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - authentik.k8s.749rmw.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
