applications/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - auth.k8s.749rmw.com
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
